--- a/public/style.css
+++ b/public/style.css
@@ -4,26 +4,37 @@
     font-family: 'VT323', monospace;
 }
 
-#box {
+/* #box {
     margin: auto;
     margin-top: 10%;
     width: 30%;
     padding: 10px;
+} */
+
+body {
+    float: left;
+    text-align: left;
+    width: 20%;
+    margin-left: 80px;
+    margin-top: 80px;
 }
 
 h1 {
     font-size: 60px;
-    text-align: center;
-    padding-bottom: 15px;
-    border-bottom: 4px solid #a6a7cf;
+    margin: 0px;
+    padding-bottom: 20px;
+/*     border-bottom: 4px solid #a6a7cf; */
 }
 
 li {
+    color: white;
+    text-align: left;
     list-style-type: none;
+    font-size: 40px;
 }
 
 /* https://www.w3schools.com/css/tryit.asp?filename=trycss_grid */
-.grid-container {
+/* .grid-container {
     display: grid;
     padding: 0px;
     grid-template-columns: auto auto auto;
@@ -35,6 +46,11 @@ li {
     padding: 20px;
     font-size: 30px;
     text-align: center;
+} */
+
+.grid-container {
+    padding: 0px;
+    margin: 0px;
 }
 
 .grid-item:hover {
