--- a/public/style.css
+++ b/public/style.css
@@ -16,15 +16,16 @@
 body {
     float: left;
     text-align: left;
-    width: 20%;
+    width: 15%;
     margin-left: 10%;
     margin-top: 80px;
 }
 
 h1 {
-    font-size: 60px;
+    padding-left: 16px;
+    font-size: 40px;
     margin: 0px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 /*     border-bottom: 4px solid #a6a7cf; */
 }
 
@@ -36,24 +37,17 @@ li {
     padding-bottom: 10px;
 }
 
+/* GRIDS */
 /* https://www.w3schools.com/css/tryit.asp?filename=trycss_grid */
-/* .the-list {
-    display: grid;
-    padding: 0px;
-    grid-template-columns: auto auto auto;
-}
-
-.grid-item {
-    color: #a6a7cf;
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    font-size: 30px;
-    text-align: center;
-} */
 
 .the-list {
     padding: 0px;
     margin: 0px;
+}
+
+.grid-item {
+    font-size: 25px;
+    padding: 16px;
 }
 
 .grid-item:hover {
@@ -74,4 +68,8 @@ li {
 
 #text-display {
     color: lightblue;
+}
+
+.test {
+    background: orange;
 }
