--- a/public/style.css
+++ b/public/style.css
@@ -53,6 +53,7 @@ li {
 .grid-item:hover {
     background: pink;
     color: black;
+    cursor: pointer;
 }
 
 #box2 {
@@ -73,3 +74,13 @@ li {
 .test {
     background: orange;
 }
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  }
