--- a/public/style.css
+++ b/public/style.css
@@ -22,11 +22,18 @@ body {
 }
 
 h1 {
-    padding-left: 16px;
+    padding: 16px;
     font-size: 40px;
-    margin: 0px;
-    padding-bottom: 40px;
+    margin-bottom: 20px;
 /*     border-bottom: 4px solid #a6a7cf; */
+}
+
+h1:hover {
+    background: #090912;
+    padding: 15px;
+    border: 1px solid pink;
+    color: white;
+    cursor: pointer;
 }
 
 li {
