--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -48,21 +48,6 @@ li {
     width: 60%;
 }
 
-#page {
-    padding: 5%;
-    font-size: 25px;
-    border: 1px dashed pink;
-    border-top: none;
-    height: 40%;
-    border-left: none;
-    border-right: none;
-
-    font-family: 'Inconsolata', monospace;
-    font-size: 25px;
-    line-height: 35px;
-    color: white;
-}
-
 .grid-container {
     border: 1px dashed pink;
     border-right: none;
@@ -85,10 +70,38 @@ li {
     padding: 14px 14px 16px 16px;
   }
 
+  #page {
+    padding: 5%;
+    border: 1px dashed pink;
+    border-top: none;
+    height: 40%;
+    border-left: none;
+    border-right: none;
+}
+
+  #entry, #cursor {
+    padding: none;
+    margin: none;
+    display: inline;
+    font-family: 'Inconsolata', monospace;
+    font-size: 25px;
+    line-height: 35px;
+    color: white;
+  }
+
   #phantom {
       position: absolute;
       outline-style: none;
       z-index: -999;
+  }
+
+  #cursor {
+      margin: 0px;
+      padding: 0px;
+      display: inline;
+      text-align: left;
+      background: rgb(113, 148, 201);
+      color: rgb(113, 148, 201);
   }
 
 
