--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -112,11 +112,14 @@ li {
   }
 
   #cursor {
-      font-style: 100px;
+      font-size: 30px;
       margin-left: -12px;
+      margin-top: -1px;
       visibility: hidden;
       display: none;
       position: absolute;
+      padding: 0px;
+      font-weight: 1000;
       color: rgb(113, 148, 201);
       background: none;
       z-index: 999;
