change fast delete to ctrl+backspace instead of command+backspace

--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -106,8 +106,8 @@ d
 
   #phantom {
       position: absolute;
-      outline-style: none;
-      z-index: -999;
+      outline-style: block;
+      z-index: 999;
   }
 
   #cursor-wrap {
