--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -72,11 +72,9 @@ li {
 
   #page {
     padding: 5%;
-    border: 1px dashed pink;
+    border-top: 1px dashed pink;
     border-top: none;
     height: 40%;
-    border-left: none;
-    border-right: none;
 }
 
   #entry, #outry, #cursor, #placeholder {
@@ -94,9 +92,9 @@ li {
   }
 
   .text-title {
-    font-size: 80px;
+    font-size: 60px;
+    line-height: 60px;
     font-family: 'VT323', monospace;
-    line-height: 80px;
     background: none;
     color: red;
   }
@@ -117,6 +115,7 @@ li {
       position: absolute;
       outline-style: none;
       z-index: -999;
+      margin-left: -1000
   }
 
   #cursor-wrap {
@@ -137,6 +136,34 @@ li {
       background: none;
       z-index: 999;
   }
+
+/*   .cursor-normal {
+    font-size: 30px;
+    margin-left: -12px;
+    margin-top: -1px;
+    visibility: hidden;
+    display: none;
+    position: absolute;
+    padding: 0px;
+    font-weight: 1000;
+    color: rgb(113, 148, 201);
+    background: none;
+    z-index: 999;
+  } */
+
+/*   .cursor-title {
+    font-size: 30px;
+    margin-left: -12px;
+    margin-top: -1px;
+    visibility: hidden;
+    display: none;
+    position: absolute;
+    padding: 0px;
+    font-weight: 1000;
+    color: rgb(113, 148, 201);
+    background: none;
+    z-index: 999;
+  } */
 
 a {
     padding: 2px 8px 6px 8px;
