--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -81,10 +81,9 @@ li {
     display: inline;
   }
 
-  .text-normal, #cursor, #placeholder {
+  .text-normal, #placeholder {
     padding: none;
     margin: none;
-    line-height: 35px;
     font-family: 'Inconsolata', monospace;
     font-size: 25px;
     color: white;
@@ -127,7 +126,7 @@ li {
     color: black;
   }
 
-  #cursor {
+/*   #cursor {
       font-size: 30px;
       margin-left: -12px;
       margin-top: -1px;
@@ -139,7 +138,20 @@ li {
       color: rgb(113, 148, 201);
       background: none;
       z-index: 999;
-  }
+  } */
+
+#cursor {
+    color: rgb(113, 148, 201);
+    background: none;
+    font-size: 20px;
+    padding: 0px;
+    margin: 0px;
+    margin-left: -5px;
+    padding-left: 5px;
+    background: blue;
+    position: inline;
+    z-index: 999;
+}
 
 
 
