--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -104,10 +104,6 @@ li {
 
   }
 
-  #micro {
-      font-size: 0px;
-  }
-
   #placeholder {
       font-size: 25px;
       font-weight: 500px;
@@ -119,11 +115,6 @@ li {
       outline-style: none;
       z-index: -999;
       margin-left: -1000
-  }
-
-  #cursor-wrap {
-    display: inline;
-    color: black;
   }
 
 /*   #cursor {
@@ -141,6 +132,7 @@ li {
   } */
 
 #cursor {
+    display: none;
     color: rgb(113, 148, 201);
     background: none;
     font-size: 20px;
@@ -151,6 +143,10 @@ li {
     background: blue;
     position: inline;
     z-index: 999;
+}
+
+#cursor-wrap {
+    font-size: 0px;
 }
 
 
