--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -137,15 +137,16 @@ li {
     font-size: 24px;
     padding: 0px;
     margin: 0px;
-    margin-left: -2px;
     height: 20px;
-    padding-left: 4px;
-    background:rgb(113, 148, 201);
+    outline: 3px solid rgb(113, 148, 201);
+
+    background: none;
     position: inline;
     z-index: 999;
 }
 
 #cursor-wrap {
+    display: inline;
     font-size: 0px;
 }
 
