--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -135,6 +135,14 @@ li {
     display: inline;
 }
 
+#entry {
+  background: rgb(24, 0, 145);
+}
+
+#outry {
+  background: rgb(1, 35, 1);
+}
+
 #cursor {
     display: none;
     font-size: 24px;
