dashHighlight color defined globally

--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -141,7 +141,7 @@ li {
   #placeholder {
       font-size: 25px;
       font-weight: 500px;
-      color: rgb(41, 46, 53);
+      color: #292e35;
   }
 
   #phantom {
